# Rail_Raksha

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test_crowd_detection.py
data/: detection_log.csv
docs/: crowd_monitoring.md
models/: detector.py
pages/: crowd_monitoring.py
utils/: data_logger.py  generate_test_images.py  image_utils.py  logging_utils.py  mock_detectors.py
