[project]
name = "new-folder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "pillow>=10.2.0",
    "plotly>=5.19.0",
    "requests>=2.28.0",
    "scikit-learn>=1.2.0",
    "seaborn>=0.12.0",
    "setuptools>=69.5.1",
    "streamlit>=1.32.2",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
    "ultralytics>=8.1.0",
    # After ultralytics so GUI opencv-python does not win on Linux/Streamlit Cloud.
    "opencv-python-headless>=4.9.0.80",
]
