[project]
name = "new-folder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# NumPy 1.26 has no cp313 wheels; OpenCV headless matches NumPy 1.x ABI. Use runtime.txt python-3.11 on Streamlit.
requires-python = ">=3.11,<3.13"
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.26.4,<2",
    "pandas>=2.2.1",
    "pillow>=10.2.0",
    "plotly>=5.19.0",
    "requests>=2.28.0",
    "scikit-learn>=1.2.0",
    "seaborn>=0.12.0",
    "setuptools>=69.5.1",
    "streamlit>=1.32.2",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
    "ultralytics>=8.1.0",
    "opencv-python-headless>=4.9.0.80",
]

# Streamlit Cloud picks uv.lock over requirements.txt. Ultralytics declares opencv-python (GUI),
# which breaks headless Linux; override its metadata so resolution only pulls headless OpenCV.
[[tool.uv.dependency-metadata]]
name = "ultralytics"
requires-dist = [
    "numpy>=1.23.0,<2",
    "matplotlib>=3.3.0",
    "opencv-python-headless>=4.6.0",
    "pillow>=7.1.2",
    "pyyaml>=5.3.1",
    "requests>=2.23.0",
    "scipy>=1.4.1",
    "torch>=1.8.0",
    'torch!=2.4.0,>=1.8.0; sys_platform == "win32"',
    "torchvision>=0.9.0",
    "psutil>=5.8.0",
    "polars>=0.20.0",
    "ultralytics-thop>=2.0.18",
]
